# B-AZ4

./: .gitignore  Dockerfile  Dockerfile copy  README.md  entrypoint.sh  main.py  nginx.conf  pyproject.toml  setup.py
.github/workflows/: app.yml  docker-publish.yml  image.yml
app/: main.py  requirements.txt
app/api/: ffmpeg.py  mtproto.py  qwnull.py  xuexi.py
app/bot/: __init__.py  chat.py  git_search.py  middleware.py  others.py  redisdb.py  tgb.py  welcome.py
app/bot/local/: __init__.py  help.py  yyw.py
app/core/: config.py  file_helper.py  middleware.py  req.py  string_helper.py
app/databases/: kv.py
app/services/: git.py  google.py  pan_yyw.py  telegram.py
scripts/: commands.py  log.py  sqlite.py
tests/: test_kv.py  test_tg.py
