[project]
name = "x-az4"
version = "0.1.0"
description = "???"
authors = [
  { name = "Your Name", email = "you@example.com" }
]

requires-python = ">=3.12"

dependencies = [
  "cython>=3.0.11",
  "pytelegrambotapi>=4.26.0",
  "av>=14.0.1",
  "redis>=5.2.1",
  "pytest>=8.3.4",
  "fastapi>=0.121.2",
  "uvicorn>=0.38.0",
  "python-dotenv>=1.2.1",
  "aiohttp>=3.13.2",
  "setuptools>=80.9.0",
  "qrcode>=8.2",
  "python-multipart>=0.0.20",
  "telethon>=1.42.0",
  "pysocks>=1.7.1",
  "curl-cffi>=0.15.0",
  "paddlepaddle>=3.3.1",
  "paddleocr>=3.5.0",
  "beautifulsoup4>=4.14.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
acp = "scripts.commands:acp"
debug = "scripts.commands:test"
clean = "scripts.commands:clean"
compile = "scripts.commands:compile"
